# thrift

./: CMakeLists.txt
compiler/cpp/: CMakeLists.txt
lib/: Makefile.am
lib/java/: pom.xml
lib/java/libthrift/: pom.xml
lib/java/libthrift-as3/: pom.xml
lib/java/libthrift-fb303/: pom.xml
lib/java/libthrift-fb303/src/.svn/: entries
lib/java/libthrift/src/test/java/org/apache/thrift/: TestStruct.java
lib/java/libthrift/src/test/java/org/apache/thrift/scheme/: TestStandardScheme.java
lib/java/thrift-maven-plugin/: pom.xml
lib/py/: CMakeLists.txt  setup.py.in
lib/rb/: CMakeLists.txt  thrift.gemspec.in
